[package]
name = "gui_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
env_logger = { git = "https://github.com/rust-cli/env_logger.git", default-features = false, features = [
    "auto-color",
    "humantime",
] }
serialport = "4.7.0"
serde = { version = "1.0.*", default-features = false }
serde_json = "1.0"
postcard = { version = "1.1.1" }

